# NetworkLib_Modernize

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
.github/workflow/: ci.yml
NetLib/: CMakeLists.txt
NetLib/include/: Allocator.h  Container.h  CrashDump.h  Init.h  IoService.cpp  IoService.h  Logger.h  RingBuffer.h  ThreadPool.h  Utils.h  types.h
NetLib/include/Network/: DefaultHandlerAllocator.h  HandlerMemory.h  IoService.h  NetworkAcceptor.h  NetworkConnector.h  NetworkService.h  SendBuffer.cpp  SendBuffer.h  Session.h  SessionManager.h
NetLib/src/: Allocator.cpp  CrashDump.cpp  Init.cpp  IoService.cpp  Logger.cpp  NetworkAcceptor.cpp  NetworkConnector.cpp  RingBuffer.cpp  Session.cpp  SessionManager.cpp  Utils.cpp
tests/: CMakeLists.txt  main.cpp
